[package]
name = "pd"
version = "0.1.0"
authors = ["Neil Shen <overvenus@gmail.com>"]

[lib]
name = "pd"

[[bin]]
name = "server-mock"

[dependencies]
protobuf = "1.2"
futures = "0.1"
futures-cpupool = "0.1"
backtrace = "0.2.3"
log = "0.3"
env_logger = "0.4"

[dependencies.kvproto]
git = "https://github.com/pingcap/kvproto.git"
branch = "ov/grpc-pdpb"

[dependencies.grpc]
git = "https://github.com/pingcap/grpc-rust.git"
