[package]
name = "pd"
version = "0.1.0"
authors = ["Neil Shen <overvenus@gmail.com>"]

[lib]
name = "pd"

[[bin]]
name = "server-mock"

[[bin]]
name = "client"

[[test]]
name = "tests"

[features]
default = []
dev = ["clippy"]

[dependencies]
clippy = {version = "*", optional = true}

protobuf = "1.2"
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"

backtrace = "0.2.3"
log = "0.3"
env_logger = "0.4"

quick-error = "0.2"
rand = "0.3"
url = "1.2"
lazy_static = "0.2.1"

[dependencies.kvproto]
git = "https://github.com/pingcap/kvproto.git"
branch = "ov/grpc-pdpb"

[dependencies.grpc]
git = "https://github.com/pingcap/grpc-rust.git"

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
default-features = false
features = ["nightly"]
